--- a/src/main/resources/templates/bookRegister.html
+++ b/src/main/resources/templates/bookRegister.html
@@ -5,6 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<!-- FontAwesome for Icons -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 	<title>Book Store</title>
 	<style>
 		body {
@@ -129,6 +132,7 @@
 					<label class="form-label">Price (₹)</label>
 					<input type="number" class="form-control" name="price" required>
 				</div>
+				<br>
 				<button type="submit" class="btn btn-primary btn-submit">Submit</button>
 			</form>
 		</div>
