--- a/src/main/resources/templates/bookEdit.html
+++ b/src/main/resources/templates/bookEdit.html
@@ -8,7 +8,7 @@
 	<!-- FontAwesome for Icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-	<title>Book Store - Edit Book</title>
+	<title>Bookify</title>
 	<style>
 		body {
 			background-color: #f8f9fa;
