--- a/src/main/resources/templates/myBooks.html
+++ b/src/main/resources/templates/myBooks.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/0faddc1af8.js" crossorigin="anonymous"></script>
-  <title>My Books - Book Store</title>
+  <title>Bookify</title>
   <style>
     body {
       background-color: #f8f9fa;
